# scenario_editor_plugin

./: CMakeLists.txt  Doxyfile  README.md  aidi_scenario_editor.pro  aidiscenarioeditor.cpp  aidiscenarioeditor.h  aidiscenarioeditor.ui  aidiscenarioeditor.ui.autosave  example.rviz  main.cpp  package.xml  plugin_description.xml
docs/: adl__serializer_8hpp_source.html  annotated.html  binary__reader_8hpp_source.html  binary__writer_8hpp_source.html  byte__container__with__subtype_8hpp_source.html  classScenarioEditorCore-members.html  classScenarioEditorCore.html  classScenarioEditorCore__inherit__graph.map  classScenarioEditorCore__inherit__graph.md5  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1byte__container__with__subtype-members.html  classnlohmann_1_1byte__container__with__subtype.html  classnlohmann_1_1byte__container__with__subtype__coll__graph.md5  classnlohmann_1_1byte__container__with__subtype__inherit__graph.map  classnlohmann_1_1byte__container__with__subtype__inherit__graph.md5  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  classnlohmann_1_1detail_1_1exception__inherit__graph.map  classnlohmann_1_1detail_1_1file__input__adapter-members.html  classnlohmann_1_1detail_1_1file__input__adapter.html  classnlohmann_1_1detail_1_1input__stream__adapter-members.html  classnlohmann_1_1detail_1_1input__stream__adapter.html  classnlohmann_1_1detail_1_1invalid__iterator-members.html  classnlohmann_1_1detail_1_1invalid__iterator.html  classnlohmann_1_1detail_1_1invalid__iterator__inherit__graph.map  classnlohmann_1_1detail_1_1iter__impl-members.html  classnlohmann_1_1detail_1_1iter__impl.html  classnlohmann_1_1detail_1_1iter__impl__coll__graph.map  classnlohmann_1_1detail_1_1iter__impl__coll__graph.md5  classnlohmann_1_1detail_1_1iteration__proxy-members.html  classnlohmann_1_1detail_1_1iteration__proxy.html  (+577 more)
html/: md_README.html
src/: main.cpp  (+5 more)
(+106 files in other folders)
